VDR Plugin 'vdirs' Revision History
-----------------------------------

2018-01-06: Version 0.0.1
- Initial revision.

2024-09-01: Version 1.0.0
- changed stat() to lstat() in IsFile() and IsSymlink() to
  fix symlink detection.
- added header to point to COPYRIGHT and README
- added README
- bump version

2024-09-01: Version 1.0.1
- LinkDest(), add missing memset
- bool MultiVideoDir::Remove(std::string Name), deleting non-existent
  Files/Dirs shouldnt trigger any error
- cosmetics
- bump version

2024-xx-xx: Version 1.0.2
- fops.{cpp,h}: replace split() by librepfunc::StrSplit()
- {fops,multidir}.{cpp,h}: replace FileExists() by librepfunc::FileExists()
- fops.{cpp,h}: replace DirectoryExists() by librepfunc::DirectoryExists()
- silence compiler by default
